--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,6 +18,7 @@
     margin-top: 0;
     z-index: 10;
   }
+
   
   .navbar {
     background-image: linear-gradient(to right, #142d4c, #142d4c);
@@ -157,7 +158,7 @@
   }
   
   /*---------about me-----*/
-  #about-us {
+  #about-me {
     color: #fff;
     background: #142d4c;
     padding-bottom: 50px;
@@ -172,7 +173,7 @@
     margin-top: 8%;
   }
   
-  #about-us ul li {
+  #about-me ul li {
     margin: 10px;
   }
   
@@ -184,50 +185,82 @@
   
   
  /*---------Projects-----*/
- #social-media {
+.card-img-top {
+  width: 200px;
+  height: 400PX;
+}
+.card-body {
+  background-color: #142d4c;
+  color: white;
+}
+
+
+  .card-text {
+    color: white;
+  }
+ 
+  .card-name {
+    color: white;
+  }
+
+   /*---social--*/
+   #social-media {
     background: #fff;
     color: black;
     padding: 100px 0;
   }
-  
-
-   /*---social--*/
-
    #social-media p {
     font-size: 36px;
     font-weight: 600;
     margin-bottom: 30px;
   }
 
-  #footer {
-    background-image: linear-gradient(to right, #142d4c, #142d4c);
-    color: #fff;
-  }
-  
-  .footer-img {
-    width: 100%;
-  }
-  
-  .footer-box {
-    padding: 20px;
-  }
-  
-  .footer-box img {
-  width: 120px;
-  margin-bottom: 20px;
-}
-.footer-box .fa {
-    margin-right: 8px;
-    font-size: 25px;
-    height: 40px;
-    width: 40px;
-    text-align: center;
-    padding-top: 7px;
-    border-radius: 2px;
-    background-image: linear-gradient(to right, #142d4c, #142d4c);
-  }
-  
-  .footer-center {
-    margin: top 20%;
-  }
-  
+    /*---footer--*/
+    #footer {
+      background-image: linear-gradient(to right, #142d4c, #142d4c);
+      color: #fff;
+    }
+    
+    .footer-img {
+      width: 100%;
+    }
+    
+    .footer-box {
+      padding: 20px;
+    
+      img {
+        width: 120px;
+        margin-bottom: 20px;
+      }
+    
+      .fa {
+        margin-right: 8px;
+        font-size: 25px;
+        height: 40px;
+        width: 40px;
+        text-align: center;
+        padding-top: 7px;
+        border-radius: 2px;
+        background-image: linear-gradient(to right, #142d4c, #142d4c);
+      }
+    }
+    
+    .footer-center {
+      margin: top 20%;
+    }
+    
+
+    .footer-copyright p {
+      color: #fff;
+      margin: 2px 0 0;
+    }
+    
+    .footer-box .form-control {
+      box-shadow: none !important;
+      border: none;
+      border-radius: 0;
+      margin-top: 25px;
+      max-width: 250px;
+    }
+    
+ 
